# bevy-ecs-ui-experiment

./: Cargo.toml  LICENSE  Readme.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
assets/: for_expressions.buml  if_expressions.buml  simple.buml  simple.css  simple_expressions.buml
examples/: for_expressions.rs  if_expressions.rs  simple.rs  simple_expressions.rs
hot-reload/: Cargo.toml  Readme.md
hot-reload/examples/: simple.rs
hot-reload/src/: hot_reload_internal.rs  lib.rs  lib_set.rs  library_holder.rs  reload_systems.rs  reloadable_app.rs  reloadable_app_setup.rs  replacable_types.rs  schedules.rs  types.rs  update_lib.rs  watch.rs
hot-reload/src/hot/: mod.rs  reload_systems.rs  reloadable_app_setup.rs  replacable_types.rs
hot_reload_example/: Cargo.toml
hot_reload_example/src/: lib.rs  main.rs
reload-macros/: Cargo.toml
reload-macros/src/: lib.rs
src/: button.rs  expression.rs  image.rs  lib.rs  node.rs  reactive_expression_handlers.rs  string_expression.rs  style_structs.rs  text.rs  ui_asset.rs  ui_bundle.rs  ui_id.rs  ui_plugin.rs
src/base_components/: button.rs  image.rs  mod.rs  node.rs  text.rs
src/components/: image.rs  text.rs
src/logical_nodes/: for_node.rs  if_node.rs  mod.rs
src/style/: mod.rs  node.rs
src/style_structs/: image.rs  mod.rs  text.rs
src/ui_bundle/: ui_id.rs
src/ui_bundle_spawner/: external_ui_spawner.rs  internal_ui_spawner.rs  mod.rs  ui_bundle_generator.rs  ui_component.rs  ui_component_spawner.rs
ui-experiment/: Cargo.toml
ui-experiment/examples/: simple.rs
ui-experiment/src/: lib.rs  ui_schedule.rs
ui-experiment/src/components/: button.rs  node.rs  text.rs
ui-experiment/src/style/: background_color.rs  node.rs  text.rs
ui-experiment/src/ui_bundle_spawner/: ui_component.rs
