[package]
name = "bevy-ecs-ui-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_ui", "bevy_text", "bevy_render", "bevy_asset"]}
tomt_bevycss = "0.4.2"
bevy_common_assets = { version = "0.6", features = ["xml"]}
serde = { version = "1", features = ["derive"]}
tuple_utils = "*"
quick-xml = { version = "0.29", features = ["serialize"]}
rhai = { version = "1.14", features = ["sync", "serde"]}

[dev-dependencies]

bevy = { version = "0.10", default-features = true}
bevy-inspector-egui = "*"