[package]
name = "bevy-ecs-ui-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_ui", "bevy_text", "bevy_render", "bevy_asset"]}
tomt_bevycss = { git = "https://github.com/TheBeardedQuack/tomt_bevycss", rev = "4ef9675e8cdf42f3d41e87b79ad7bb7966cad6e7" }
bevy_common_assets = { version = "0.7", features = ["xml"]}
serde = { version = "1", features = ["derive"]}
tuple_utils = "*"
quick-xml = { version = "0.29", features = ["serialize"]}
rhai = { version = "1.14", features = ["sync", "serde"]}

[dev-dependencies]

bevy = { version = "0.11", default-features = true}